# orion-utils

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: config.cmake.in
include/orion-utils/: CMakeLists.txt  assertion.h  bitflag.h  enum.h  format.h  static_vector.h  type.h  uninitialized.h
include/orion-utils/allocators/: linear_allocator.h
tests/: CMakeLists.txt  bitflag.cpp  enum.cpp  format.cpp  linear_allocator.cpp  static_vector.cpp  type.cpp  uninitialized.cpp
